xine-lib (1.1.15) 2008-??-??
  * Use external ffmpeg by default.
  * V4L: Don't segfault if asked for an input that doesn't exist
  * Recognise AMR audio (normally found in 3GP files).

xine-lib (1.1.14) 2008-06-29
  * DVB changes:
    - Reacquire PIDs whenever a PMT is parsed. (Some channels' PIDs are
      changed on a regular basis.)
    - Recognise more stream formats (as defined in the broadcast PMT).
    - Allow automatic detection of more DVB tuning parameters.
    - Allow the GUI to be disabled.
    - Allow configuration of the location of channels.conf.
  * V4L: allow TV standard selection.
  * Allow input plugins to report MIME type information.
    This is used for demuxer plugin selection immediately before testing the
    filename extension (so it won't work when demuxer selection is done by
    stream content only). [Bug #120]
  * Allow input plugins to ask for a specific demuxer, overriding the normal
    demuxer selection methods. (Most won't need this.)
  * The Xv and XxMC video output plugins now support Xv port selection via
    two methods: port number and port type (currently "any", "overlay" and
    "textured video"). Port number takes precedence; the plugins will fall
    back on another port of the same type (if a type was specified) then on
    whatever they can find.
    XvMC does not support port selection at present.
    (Backported from the 1.2 branch.)
  * Fix MPEG TS audio stream problems introduced in 1.1.13.
  * Add basic aspect ratio detection for Windows Media Video streams.

xine-lib (1.1.13) 2008-06-15
  * Security fixes:
    - Buffer overflow in the NSF demuxer which may allow remote attackers to
      cause a denial of service (crash) or possibly execute arbitrary code
      via an NSF file with a long title or copyright message. (CVE-2008-1878)
    - For extra safety against possible Integer overflows like the ones found
      in CVE-2008-1482, backport more calloc usage from 1.2 branch.
  * Improved JACK output plugin.